fix visually misaligned check icon

--- a/gaming/src/app/arena/arena.component.scss
+++ b/gaming/src/app/arena/arena.component.scss
@@ -259,6 +259,7 @@
 }
 .correct-location {
     color: rgb(0, 148, 0);
+    left: 5px;
 }
 .wrong-location {
     color: rgb(160, 0, 0);
